2007-10-17 Takuro Ashie <ashie@homa.ne.jp>

	* src/gimv_text_win.[ch]: Renamed from src/text_viewer.[ch]
	* src/Makefile.am, src/help.c

2007-10-17 Takuro Ashie <ashie@homa.ne.jp>

	* src/gimv_nav_win.[ch]: Use private struct.

2007-10-16 Takuro Ashie <ashie@homa.ne.jp>

	* plugins/thumbnail/gimv_thumb.c, plugins/image_loader/prefs_spi.c,
	  plugins/image_view/prefs_xine.c, plugins/image_view/prefs_mplayer.c,
	  src/gimv_elist.c, src/gimv_image_win.c, src/auto_completion.c,
	  src/gtkutils.c, src/gimv_prefs_win.c, src/gimv_thumb_win.c,
	  src/prefs_ui/prefs_ui_etc.c, src/prefs_ui/prefs_ui_common.c,
	  src/prefs_ui/prefs_ui_progs.c, src/prefs_ui/prefs_ui_thumbwin.c,
	  src/prefs_ui/prefs_ui_plugin.c, src/prefs_ui/prefs_ui_imagewin.c:
	gtk_widget_set_usize -> gtk_widget_set_size_request.

2007-10-16 Takuro Ashie <ashie@homa.ne.jp>

	* src/gimv_image_win.c. src/gimv_thumb_win.c: Don't offset help menu.

2007-10-16 Takuro Ashie <ashie@homa.ne.jp>

	* src/gimv_image_win.c: Don't show resize grip of status bar.
	* src/gimv_thumb_win.c: Don't bind accel keys to summary mode menu.

2007-10-16 Takuro Ashie <ashie@homa.ne.jp>

	* src/gimv_elist.h, src/gimv_cell_pixmap.c, src/gimv_cell_pixmap.h,
	  src/gimv_nav_win.h, src/gimv_image_view.h, src/gimv_image_win.h,
	  src/gimv_dlist.c, src/gimv_dlist.h, src/gimv_scrolled.c,
	  src/gimv_zlist.h, src/gimv_scrolled.h, src/gimv_dupl_win.h,
	  src/gimv_zalbum.h, src/gimv_thumb_win.h:
	GTK_CHECK_* -> G_TYPE_CHECK_*

2007-10-16 Takuro Ashie <ashie@homa.ne.jp>

	* plugins/image_view/gimv_mplayer.h, plugins/image_view/gimv_xine.c,
	  plugins/image_view/gimv_xine.h, plugins/image_view/gimv_mplayer.c,
	  src/gimv_thumb_view.h, src/gimv_elist.c, src/gimv_elist.h,
	  src/gimv_nav_win.c, src/gimv_cell_pixmap.h, src/gimv_nav_win.h,
	  src/gimv_image_view.c, src/gimv_image_view.h, src/gimv_image_win.c,
	  src/gimv_image_win.h, src/gimv_dlist.c, src/gimv_dlist.h,
	  src/gimv_zlist.c, src/gimv_scrolled.c, src/gimv_zlist.h,