@@ -1,7 +1,14 @@
 2007-10-17 Takuro Ashie <ashie@homa.ne.jp>
 
+	* src/gimv_dir_view.[ch]: Renamed from src/dirview.[ch]
+	* src/Makefile.am, src/gimageview.c src/gimv_thumb_view.c,
+	  src/gimv_thumb_win.c, src/prefs_ui/prefs_ui_thumbwin.c:
+	Follow the change.
+
+2007-10-17 Takuro Ashie <ashie@homa.ne.jp>
+
 	* src/gimv_text_win.[ch]: Renamed from src/text_viewer.[ch]
-	* src/Makefile.am, src/help.c
+	* src/Makefile.am, src/help.c: Follow the change.
 
 2007-10-17 Takuro Ashie <ashie@homa.ne.jp>
 
